Fix bug with "Start new query" display
The width of the "Start new query" input is defined as 20em in its
stylesheet. However, when it is displayed in the QueryList, that width
is too wide. Therefore we add a max-width to its wrapper element when it
is used there.

--- a/src/components/Ems/EnquiriesContainer/Queries/QueryList/QueryList.module.scss
+++ b/src/components/Ems/EnquiriesContainer/Queries/QueryList/QueryList.module.scss
@@ -43,4 +43,5 @@ ol.queryList {
 
 .startNewQuery {
     align-self: center;
+    max-width: 90%;
 }
